--- a/index.html
+++ b/index.html
@@ -1615,55 +1615,48 @@ a,
 
 <script>
 (function () {
-  let marqueeWrapper, marqueeList;
-  let initialized = false;
-
-  function imagesLoaded(container, callback) {
-    const images = container.querySelectorAll('img');
-    let loaded = 0;
-
-    if (!images.length) callback();
-
-    images.forEach(img => {
-      if (img.complete) {
-        loaded++;
-        if (loaded === images.length) callback();
-      } else {
-        img.addEventListener('load', () => {
-          loaded++;
-          if (loaded === images.length) callback();
-        });
-      }
-    });
-  }
+  let marqueeList, marqueeWrapper;
+  let animationId = null;
 
   function initInfiniteMarquee() {
     marqueeWrapper = document.querySelector('.logos-slider_list-wrapper');
     marqueeList = document.querySelector('.logos-slider_list');
     if (!marqueeWrapper || !marqueeList) return;
 
-    if (initialized) return; // 🔥 STOP re-init (mobile fix)
-    initialized = true;
+    // reset
+    marqueeList.style.animation = 'none';
 
     const originalItems = Array.from(marqueeList.children);
     if (!originalItems.length) return;
 
-    // clone once
+    // remove old clones
+    marqueeList.innerHTML = '';
+    originalItems.forEach(item => marqueeList.appendChild(item));
+
+    // clone once (important)
     originalItems.forEach(item => {
       marqueeList.appendChild(item.cloneNode(true));
     });
 
-    // accurate width
-    const totalWidth = originalItems.reduce((sum, item) => {
-      return sum + item.getBoundingClientRect().width;
-    }, 0);
+    // calculate width AFTER images loaded
+    let totalWidth = 0;
+    originalItems.forEach(item => {
+      totalWidth += item.offsetWidth;
+    });
 
+    // speed responsive
     const duration =
       window.innerWidth < 768
-        ? Math.max(14, totalWidth / 70)
+        ? Math.max(12, totalWidth / 80)
         : Math.max(18, totalWidth / 120);
 
-    const style = document.createElement('style');
+    // dynamic keyframes
+    const styleId = 'marquee-keyframes';
+    let style = document.getElementById(styleId);
+    if (style) style.remove();
+
+    style = document.createElement('style');
+    style.id = styleId;
     style.textContent = `
       @keyframes infiniteScroll {
         from { transform: translateX(0); }
@@ -1672,18 +1665,16 @@ a,
     `;
     document.head.appendChild(style);
 
-    marqueeList.style.display = 'flex';
     marqueeList.style.animation = `infiniteScroll ${duration}s linear infinite`;
     marqueeList.style.willChange = 'transform';
 
     marqueeWrapper.style.overflow = 'hidden';
   }
 
-  window.addEventListener('load', () => {
-    const list = document.querySelector('.logos-slider_list');
-    if (!list) return;
-
-    imagesLoaded(list, initInfiniteMarquee);
+  window.addEventListener('load', initInfiniteMarquee);
+  window.addEventListener('resize', () => {
+    clearTimeout(animationId);
+    animationId = setTimeout(initInfiniteMarquee, 300);
   });
 })();
 </script>
