--- a/index.html
+++ b/index.html
@@ -1685,7 +1685,71 @@ a,
 })();
 </script>
 
+<!-- 
+<script>
+(function () {
+  let marqueeList, marqueeWrapper;
+  let animationId = null;
 
+  function initInfiniteMarquee() {
+    marqueeWrapper = document.querySelector('.logos-slider_list-wrapper');
+    marqueeList = document.querySelector('.logos-slider_list');
+    if (!marqueeWrapper || !marqueeList) return;
 
+    // reset
+    marqueeList.style.animation = 'none';
+
+    const originalItems = Array.from(marqueeList.children);
+    if (!originalItems.length) return;
+
+    // remove old clones
+    marqueeList.innerHTML = '';
+    originalItems.forEach(item => marqueeList.appendChild(item));
+
+    // clone once (important)
+    originalItems.forEach(item => {
+      marqueeList.appendChild(item.cloneNode(true));
+    });
+
+    // calculate width AFTER images loaded
+    let totalWidth = 0;
+    originalItems.forEach(item => {
+      totalWidth += item.offsetWidth;
+    });
+
+    // speed responsive
+    const duration =
+      window.innerWidth < 768
+        ? Math.max(12, totalWidth / 80)
+        : Math.max(18, totalWidth / 120);
+
+    // dynamic keyframes
+    const styleId = 'marquee-keyframes';
+    let style = document.getElementById(styleId);
+    if (style) style.remove();
+
+    style = document.createElement('style');
+    style.id = styleId;
+    style.textContent = `
+      @keyframes infiniteScroll {
+        from { transform: translateX(0); }
+        to { transform: translateX(-${totalWidth}px); }
+      }
+    `;
+    document.head.appendChild(style);
+
+    marqueeList.style.animation = `infiniteScroll ${duration}s linear infinite`;
+    marqueeList.style.willChange = 'transform';
+
+    marqueeWrapper.style.overflow = 'hidden';
+  }
+
+  window.addEventListener('load', initInfiniteMarquee);
+  window.addEventListener('resize', () => {
+    clearTimeout(animationId);
+    animationId = setTimeout(initInfiniteMarquee, 300);
+  });
+})();
+</script> -->
 </body>
 </html>
