--- a/index.html
+++ b/index.html
@@ -1613,7 +1613,7 @@ a,
   })();
 </script> -->
 
-<!-- <script>
+<script>
 (function () {
 
   function initInfiniteMarquee() {
@@ -1631,6 +1631,7 @@ a,
     list.innerHTML = '';
     originalItems.forEach(item => list.appendChild(item));
 
+    // Important CSS fix for mobile
     list.style.display = "flex";
     list.style.flexWrap = "nowrap";
 
@@ -1640,18 +1641,20 @@ a,
 
     function startAnimation() {
 
-      // 🔥 ORIGINAL WIDTH calculate karo
-      let originalWidth = 0;
-      originalItems.forEach(item => {
-        originalWidth += item.offsetWidth;
-      });
+      let totalWidth = list.scrollWidth;
 
-      // 🔥 EXACT 2 SETS banao
-      originalItems.forEach(item => {
-        list.appendChild(item.cloneNode(true));
-      });
+      if (totalWidth === 0) return; // mobile safety
 
-      const duration = Math.max(15, originalWidth / 80);
+      // Clone until enough width
+      while (totalWidth < wrapper.offsetWidth * 2) {
+        originalItems.forEach(item => {
+          list.appendChild(item.cloneNode(true));
+        });
+        totalWidth = list.scrollWidth;
+      }
+
+      const moveDistance = totalWidth / 2;
+      const duration = Math.max(15, moveDistance / 80);
 
       const styleId = 'marquee-keyframes';
       let oldStyle = document.getElementById(styleId);
@@ -1662,7 +1665,7 @@ a,
       style.innerHTML = `
         @keyframes infiniteScroll {
           0% { transform: translate3d(0,0,0); }
-          100% { transform: translate3d(-${originalWidth}px,0,0); }
+          100% { transform: translate3d(-${moveDistance}px,0,0); }
         }
       `;
       document.head.appendChild(style);
@@ -1680,11 +1683,9 @@ a,
   });
 
 })();
-</script> -->
 
+// 2nd loop
 
-
-<script>
 (function () {
   let marqueeList, marqueeWrapper;
   let animationId = null;
